# ab-test-toolkit

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
results/: metrics.json  results_table.md
src/ab/: __init__.py  corrections.py  cuped.py  data.py  power.py  report.py  stats_tests.py
tests/: test_corrections.py  test_cuped.py  test_data.py  test_power.py  test_stats_tests.py
