[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ab-test-toolkit"
version = "0.1.0"
description = "A reusable A/B test analysis toolkit: power, frequentist tests, CIs, CUPED, and pitfall guardrails."
readme = "README.md"
requires-python = "==3.11.*"
license = { text = "MIT" }
authors = [{ name = "Aditya Singh Rathore", email = "adityasinh0707@gmail.com" }]
keywords = ["ab-testing", "experimentation", "statistics", "cuped", "power-analysis"]

dependencies = [
    "numpy==2.1.3",
    "pandas==2.2.3",
    "scipy==1.14.1",
    "matplotlib==3.9.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "ruff==0.7.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["ab"]
